@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-23T08:23:45Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-08-24T01:59:08Z",
+  "count" : 9,
+  "count_minmax" : [ 1, 9 ],
+  "count_decinc" : [ -0, +9 ],
+  "uniques" : 6,
+  "uniques_minmax" : [ 1, 6 ],
+  "uniques_decinc" : [ -0, +6 ]
 }
