@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-23T08:23:45Z",
-  "count_outdated" : 2354,
-  "uniques_outdated" : 547,
-  "count" : 2372,
-  "uniques" : 561,
+  "timestamp" : "2022-08-24T01:59:08Z",
+  "count_outdated" : 2358,
+  "uniques_outdated" : 550,
+  "count" : 2383,
+  "uniques" : 568,
   "clones" : [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 8,
@@ -56,10 +49,10 @@
     },
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 9,
+      "count_minmax": [ 1, 9 ],
+      "uniques": 6,
+      "uniques_minmax": [ 1, 6 ]
     }
   ]
 }
