@@ -1,12 +1,7 @@
 {
-  "count": 18,
-  "uniques": 11,
+  "count": 25,
+  "uniques": 14,
   "clones": [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 8,
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 9,
+      "uniques": 6
     }
   ]
 }
